<resources>
    <string name="app_name">TallerUnimagUno</string>
    <string name="login">USUARIO</string>
    <string name="password">PASSWORD</string>
    <string name="ingresar">INGRESAR</string>
    <string name="calcular">CALCULAR</string>
    <string name="fisica">FISICA</string>
    <string name="estadistica">ESTADISTICA</string>
    <string name="texto">TEXTO</string>
    <string name="numero_uno">NUMERO UNO</string>
    <string name="numero_dos">NUMERO DOS</string>
    <string name="title_mates">MATEMATICAS</string>
    <string name="borrar_dato">BORRAR DATO</string>
    <string name="suma">SUMA</string>
    <string name="resta">RESTA</string>
    <string name="multiplicacion">MULTIPLICACIÓN</string>
    <string name="divicion">DIVICIÓN</string>
    <string name="calculadora">MATEMATICAS</string>
    <string name="terminos_condiciones">Terminos y condiciones</string>
    <string name="recuperar_contraseña">Recuperar contraseña</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="ayuda">AYUDA</string>
    <string name="cerrar_sesion">CERRAR SESIÓN</string>
</resources>